--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/digital-diplomacy">Digital Diplomacy</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/272653.es-419">México recuerda el Día Internacional de la Eliminación de la Violencia contra la Mujer</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/the-british-embassy-and-consulate-will-be-closed--2">British Embassy Santiago and Consulate will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/173244.lt">Lietuva perėmė Europos Sąjungos vairą</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-uk-visa-customers-in-kazakhstan--2">Important notice for UK visa customers in Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/186354.it">Il Regno Unito lancia un piano d&#39;azione per l&#39;impresa ed i diritti umani</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/celebrating-the-life-and-legacy-of-shakespeare-in-2016--2">Celebrating the life and legacy of Shakespeare in 2016</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/change-of-her-majestys-ambassador-to-portugal">Her Majesty’s Ambassador to Portugal</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/240429.pt">COMUNICADO AOS INSCRITOS NO WORSHOP &ldquo;ARTE DA CERVEJA BRITÂNICA&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/did-you-know-you-may-be-eligible-to-vote-in-the-eu-referendum--2">Did you know you may be eligible to vote in the EU Referendum?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/247263.zh">秦海璐出任中英电影大使 受邀探访英国影视产业</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/201656.es-419">Uruguay participa en Cumbre de la Alianza para Gobierno Abierto</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/atlantic-hurricane-season-are-you-prepared--3">Atlantic Hurricane Season: Are you prepared?</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/265215.ja">英国ショッピングウィーク　 トークショーを連日開催</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/263836.es-419">Reino Unido manifiesta su apoyo a decisión tomada por la Corte de Constitucionalidad</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queen-elizabeth-land-commemorative-coins-released">Queen Elizabeth Land Commemorative Coins released</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/farewell-happy-hour-to-celebrate-20162017-chevening-scholars">Farewell ‘happy hour’ to celebrate 2016/2017 Chevening scholars</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-the-middle-east-visits-israel--2">Minister for the Middle East Visits Israel</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
