--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-now-open--2">Applications for 2014/15 Chevening Scholarships now open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/britain-to-extend-assistance-to-combat-ebola-in-west-africa">Britain to extend assistance to combat Ebola in West Africa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/glasgow-2014-commonwealth-games-to-start-tomorrow--2">Glasgow 2014 Commonwealth Games to start tomorrow</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/important-notice-for-uk-visa-customers-in-kazakhstan--2">Important notice for UK visa customers in Kazakhstan</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/farewell-happy-hour-to-celebrate-20162017-chevening-scholars">Farewell ‘happy hour’ to celebrate 2016/2017 Chevening scholars</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/president-pierre-buyoya-opens-second-wilton-park-conference-on-peacebuilding-in-africa-in-addis-ababa--2">President Pierre Buyoya opens second Wilton Park conference on ‘Peacebuilding in Africa’ in Addis Ababa</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/281728.es-419">México y Reino Unido refrendan compromiso de colaboración ambiental</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/taipei-office-closures--3">Taipei office closures</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/282770.es">Exhibición y cata de cervezas premium británicas</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-17th-session-of-the-universal-periodic-review-working-group-geneva-21-october-to-1-november-2013--3">Human Rights Council: 17th Session of the Universal Periodic Review Working Group, Geneva, 21 October to 1 November 2013</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/--16">Ο Βρετανός Πρέσβης Τζων Κίττμερ στην Κρήτη</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--12">Advice for British nationals in Kolkata</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210686.zh-tw">台英組織簽訂合作，開放資料邁向國際</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/251447.zh-tw">英國貿易文化辦事處對於復興航空GE222班機墜毀事件深表遺憾</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/country-page-news-item--3">Country Page News Item</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/285657.pt">#INFRASTRUCTUREisGREAT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/222109.zh-tw">英國貿易文化辦事處休館公告</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
