--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
 <li><a href="https://www.gov.ukhttp//www.glasgow.gov.uk">Glasgow City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//www.nhs.uk/conditions/stress-anxiety-depression/benefits-of-talking-therapy/">Talking therapy - NHS</a></li>
+<li><a href="https://www.gov.ukhttp//www.bristol.gov.uk">Bristol City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hounslow.gov.uk">London Borough of Hounslow Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.kingston.gov.uk/">Royal Borough of Kingston upon Thames Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.charnwood.gov.uk">Charnwood Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//gov.wales/covid-19-alert-levels">Coronavirus (COVID-19) alert levels in Wales - GOV.WALES</a></li>
-<li><a href="https://www.gov.ukhttp//www.oxfordshire.gov.uk/">Oxfordshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.havant.gov.uk">Havant Borough Council</a></li>
-<li><a href="https://www.gov.ukhttps//www.ethnicity-facts-figures.service.gov.uk/crime-justice-and-the-law/policing/stop-and-search/latest">Stop and search | Ethnicity facts and figures</a></li>
+<li><a href="https://www.gov.ukhttp//www.huntsdc.gov.uk">Huntingdonshire District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.herefordshire.gov.uk">Herefordshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.boroughofpoole.com">Borough of Poole Council</a></li>
+<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
